# gerador-legendas

./: .env.example  .gitignore  COMO-USAR.md  DEPLOY-HOSTED.md  GUIA-INSTALACAO.md  INSTALACAO-COMPRADOR.md  README.md  compare_translations.js  install.sh  legendas.sh  page.tsx  pix_pending_email.py  routes_me.py  start.sh
backend/: .env.example  .env.hosted.example  .gitignore  app_settings.py  asaas.py  ass_gen.py  auth.py  cakto_webhook.py  checkout.py  client_ip.py  clip_render.py  clips.py  compose.py  crypto_util.py  db_jobs.py  deps.py  effects.py  enrich.py  fonts_util.py  jobs.py  keywords.py  main.py  media.py  meta_capi.py  mobile_access.py  openai_chat.py  openpix_fulfillment.py  overlays.py  pix_pending_email.py  presets.py  purchase_email.py  pyproject.toml  render.py  request_context.py  routes_admin.py  routes_me.py  supabase_client.py  templates.py  tenant.py  test_asaas.py  (+14 more)
backend/scripts/: activate_customer.py  fulfill_openpix_order.py  send_meta_purchase.py
deploy/: Caddyfile.template  MANUTENCAO.md  legendas-backend.service  legendas-frontend.service  legendas-nginx.conf  legendas-stack.template.yaml  legendas-stack.yaml  nginx.conf  setup.sh  traefik-dynamic-legendas.yml  update-from-git.sh  update-traefik-upload-timeouts.sh  vps.env.example
docs/: MANUAL-SUPORTE-IA.md
frontend/: ._.  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: CAKTO-WEBHOOK-SETUP.md  OPENPIX-WEBHOOK-SETUP.md  apply-supabase-hosted.sh  deploy-cakto-webhook.sh  deploy-openpix-webhook.sh  download-fonts.sh  instalar-mac.sh  (+7 more)
(+119 files in other folders)
