[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legendas-locais-backend"
version = "0.1.0"
description = "Legendas automaticas estilo CapCut - backend local"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "mlx-whisper>=0.4.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.setuptools]
py-modules = ["main", "transcribe", "ass_gen", "render", "jobs", "presets", "media", "fonts_util", "timing", "effects", "keywords", "compose", "templates", "enrich"]
